--- a/ChurchApplication/app/src/main/res/layout/activity_home.xml
+++ b/ChurchApplication/app/src/main/res/layout/activity_home.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey"
+    android:background="@color/sky_blue"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -11,58 +11,126 @@
 
     <ImageView
         android:id="@+id/groupPic"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="200dp"
+        android:scaleType="fitXY"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/youth_group" />
+        android:src="@drawable/youth_group"
+        android:background="@drawable/my_border"
+        android:padding="5dp"/>
 
     <TableLayout
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/groupPic">
+        android:layout_below="@+id/groupPic"
+        android:scaleType="fitXY">
 
         <TableRow
             android:id="@+id/menu_row_1"
-            android:layout_marginTop="45dp"
+            android:layout_marginTop="30dp"
             android:layout_centerHorizontal="true">
 
             <ImageButton
                 android:id="@+id/tenbytenButton"
-                android:background="@drawable/bible"
+                android:src="@drawable/bible"
                 android:layout_height="75dp"
                 android:layout_width="75dp"
-                android:layout_marginRight="75dp">Ten by Ten</ImageButton>
+                android:layout_marginRight="75dp"
+                android:scaleType="fitXY"
+                android:background="@drawable/my_border"
+                android:padding="6dp">Ten And Tens</ImageButton>
 
             <ImageButton
                 android:id="@+id/eventsButton"
-                android:background="@drawable/calendar"
+                android:src="@drawable/calendar"
                 android:layout_width="75dp"
-                android:layout_height="75dp">Events
+                android:layout_height="75dp"
+                android:scaleType="fitXY"
+                android:background="@drawable/my_border"
+                android:padding="6dp">Events
             </ImageButton>
 
         </TableRow>
 
         <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="3dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/ten_and_tens"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:id="@+id/textView3"
+                android:gravity="center_horizontal"
+                android:layout_marginRight="75dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/events"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:id="@+id/textView4"
+                android:gravity="center_horizontal"/>
+        </TableRow>
+
+        <TableRow
             android:id="@+id/menu_row_2"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:layout_centerHorizontal="true">
 
             <ImageButton
                 android:id="@+id/announcementsButton"
-                android:background="@drawable/megaphone"
+                android:maxWidth="75dp"
+                android:src="@drawable/megaphone"
                 android:layout_width="75dp"
                 android:layout_height="75dp"
-                android:layout_marginRight="75dp">Announcements</ImageButton>
+                android:layout_marginRight="75dp"
+                android:scaleType="fitXY"
+                android:background="@drawable/my_border"
+                android:padding="6dp">Announcements</ImageButton>
 
             <ImageButton
                 android:id="@+id/aboutUsButton"
-                android:background="@drawable/unhindered_logo"
+                android:src="@drawable/unhindered_logo"
                 android:layout_width="75dp"
-                android:layout_height="75dp">About Us
+                android:layout_height="75dp"
+                android:scaleType="fitXY"
+                android:background="@drawable/my_border"
+                android:padding="6dp">About Us
             </ImageButton>
 
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="3dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxWidth="75dp"
+                android:text="@string/alerts"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:id="@+id/textView"
+                android:gravity="center_horizontal"
+                android:layout_marginRight="75dp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/about_us"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:id="@+id/textView2"
+                android:gravity="center_horizontal"/>
         </TableRow>
     </TableLayout>
 
