--- a/ChurchApplication/app/src/main/res/layout/activity_ten_by_ten.xml
+++ b/ChurchApplication/app/src/main/res/layout/activity_ten_by_ten.xml
@@ -6,6 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="@color/sky_blue"
     tools:context="church_application.rose_hulman.edu.churchapplication.TenByTenActivity">
 
     <TextView
