--- a/ChurchApplication/app/src/main/res/values/colors.xml
+++ b/ChurchApplication/app/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="grey">#ddd</color>
+    <color name="sky_blue">#87CEEB</color>
+    <color name="black">#000000</color>
 </resources>
