--- a/ChurchApplication/app/src/main/res/layout/activity_events.xml
+++ b/ChurchApplication/app/src/main/res/layout/activity_events.xml
@@ -10,8 +10,8 @@
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <ListView
-        android:id="@+id/events_list_view"
+        android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
