--- a/ChurchApplication/app/src/main/res/values/colors.xml
+++ b/ChurchApplication/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="sky_blue">#E0F7FA</color>
     <color name="black">#000000</color>
+    <color name="grey">#CCCCCC</color>
+    <color name="dark_grey">#888888</color>
+    <color name="white">#FFFFFF</color>
 </resources>
