--- a/ChurchApplication/app/src/main/res/layout/widget_layout.xml
+++ b/ChurchApplication/app/src/main/res/layout/widget_layout.xml
@@ -6,7 +6,48 @@
     android:orientation="vertical"
     android:background="@color/grey"
     android:padding="@dimen/widget_margin"
-    android:requiresFadingEdge="vertical|horizontal">
+    android:requiresFadingEdge="vertical|horizontal"
+    android:weightSum="1">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/widgetLogo"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/unhindered_logo"
+            android:maxWidth="10dp"
+            android:maxHeight="10dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Unhindered Student Ministries"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:layout_gravity="center"
+            android:gravity="center_vertical"
+            android:id="@+id/widgetTitle"
+            android:layout_centerInParent="true"
+            android:layout_centerHorizontal="true" />
+
+        <Button
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/widgetSyncButton"
+            android:background="@drawable/ic_menu_sync"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true" />
+
+    </RelativeLayout>
 
     <TextView
         android:layout_width="match_parent"
@@ -17,6 +58,7 @@
         android:textSize="18sp"
         android:background="@color/black"
         android:id="@+id/widgetEventsTitle"
+        android:layout_marginTop="5dp"
         android:layout_gravity="center_horizontal"
         android:gravity="center"/>
 
@@ -25,8 +67,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="5dp"
         android:background="@color/dark_grey"
-        android:id="@+id/widgetEventsListView"
-        android:layout_gravity="center_horizontal" />
+        android:id="@+id/widgetEventsListView" />
 
     <TextView
         android:layout_width="match_parent"
