--- a/ChurchApplication/app/src/main/res/layout/widget_item.xml
+++ b/ChurchApplication/app/src/main/res/layout/widget_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="50dp"
-android:orientation="horizontal">
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:id="@+id/widgetItem"
+    android:orientation="horizontal">
 
 <TextView
     android:id="@+id/text1"
@@ -30,5 +31,15 @@ android:orientation="horizontal">
     android:requiresFadingEdge="horizontal"
     android:fadingEdgeLength="100sp"
     android:inputType="text"/>
+
+    <ImageButton
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:background="@color/grey"
+        android:layout_marginRight="15dp"
+        android:src="@drawable/right_arrow"
+        android:id="@+id/widgetItemButton"
+        android:layout_centerVertical="true"
+        android:layout_alignParentRight="true" />
 
 </RelativeLayout>
