--- a/ChurchApplication/app/src/main/res/xml/widget_provider.xml
+++ b/ChurchApplication/app/src/main/res/xml/widget_provider.xml
@@ -3,5 +3,6 @@
     android:minWidth="250dp"
     android:minHeight="200dp"
     android:initialLayout="@layout/widget_layout"
+    android:updatePeriodMillis="0"
     android:resizeMode="horizontal|vertical">
 </appwidget-provider>
