--- a/ChurchApplication/app/src/main/res/layout/widget_layout.xml
+++ b/ChurchApplication/app/src/main/res/layout/widget_layout.xml
@@ -22,6 +22,7 @@
             android:src="@drawable/unhindered_logo"
             android:maxWidth="10dp"
             android:maxHeight="10dp"
+            android:contentDescription="@string/widget_logo_description"
             android:layout_alignParentTop="true"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true" />
@@ -29,7 +30,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Unhindered Student Ministries"
+            android:text="@string/unhindered"
             android:textStyle="bold"
             android:textSize="16sp"
             android:textColor="@color/black"
@@ -52,7 +53,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Events"
+        android:text="@string/events"
         android:textColor="@color/white"
         android:textStyle="bold"
         android:textSize="18sp"
@@ -73,7 +74,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Announcements"
+        android:text="@string/announcements"
         android:textStyle="bold"
         android:textColor="@color/white"
         android:background="@color/black"
