--- a/ChurchApplication/app/src/main/res/layout/activity_announcement_details.xml
+++ b/ChurchApplication/app/src/main/res/layout/activity_announcement_details.xml
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
+        android:layout_marginRight="10dp"
         android:text="@string/announcement_description_holder"
         android:id="@+id/announcementDescriptionTextView"
         android:layout_marginTop="22dp"
